added form fields

--- a/index.html
+++ b/index.html
@@ -25,6 +25,59 @@
           ></textarea>
         </div>
         <div class="card-footer">
+          <form>
+            <p>
+              <label for="passwordLength"
+                >Password Length (Must be between 8 and 128):</label
+              >
+              <input
+                type="text"
+                placeholder=""
+                id="passwordLength"
+                name="passwordLength"
+              />
+            </p>
+            <p>
+              <label for="includeLowercase">Include Lowercase:</label>
+              <span class="radio-wrapper">
+                <input
+                  type="checkbox"
+                  name="includeLowercase"
+                  id="includeLowercase"
+                />
+              </span>
+            </p>
+            <p>
+              <label for="includeUppercase">Include Uppercase:</label>
+              <span class="radio-wrapper">
+                <input
+                  type="checkbox"
+                  name="includeUppercase"
+                  id="includeUppercase"
+                />
+              </span>
+            </p>
+            <p>
+              <label for="includeSpecial">Include Special Characters:</label>
+              <span class="radio-wrapper">
+                <input
+                  type="checkbox"
+                  name="includeSpecial"
+                  id="includeSpecial"
+                />
+              </span>
+            </p>
+            <p>
+              <label for="includeNumeric">Include Numeric Characters:</label>
+              <span class="radio-wrapper">
+                <input
+                  type="checkbox"
+                  name="includeNumeric"
+                  id="includeNumeric"
+                />
+              </span>
+            </p>
+          </form>
           <button id="generate" class="btn">Generate Password</button>
           <button id="regenerate" class="btn">Re-Generate Password</button>
         </div>
