--- a/index.html
+++ b/index.html
@@ -80,6 +80,9 @@
           </form>
           <button id="generate" class="btn">Generate Password</button>
           <button id="regenerate" class="btn">Re-Generate Password</button>
+          <div>
+            <button id="copytext" class="btn">Copy Text</button>
+          </div>
         </div>
       </div>
     </div>
