--- a/index.html
+++ b/index.html
@@ -86,6 +86,20 @@
         </div>
       </div>
     </div>
+
+    <!-- Modal  -->
+    <div id="modalAlert" class="modal">
+      <div class="modalContent">
+        <div class="modalHeader">
+          <span id="modalClose" class="close">&times;</span>
+          <h3 id="modalHeaderTitle">test</h3>
+        </div>
+        <div class="modalBody">
+          <p id="modalBodyText">test</p>
+        </div>
+        <div class="modalFooter"></div>
+      </div>
+    </div>
     <script src="assets/js/script.js"></script>
   </body>
 </html>
